feature: select branch in front end
