# routers/docs/swagger.json
@@ -418,6 +418,48 @@
                 }
             }
         },
+        "/repos/{scm}/{namespace}/{name}/branches": {
+            "get": {
+                "tags": [
+                    "Repository"
+                ],
+                "summary": "list repository branches",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "SCM",
+                        "name": "scm",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Namespace",
+                        "name": "namespace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/repos/{scm}/{namespace}/{name}/commits": {
             "get": {
                 "tags": [
@@ -445,6 +487,12 @@
                         "name": "name",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "branch to list commits from",
+                        "name": "ref",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1011,6 +1059,9 @@
         "user.Token": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
